--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,8 @@
                 <li><a href="#counters">Benefits</a></li>
                 <li><a href="#mission">Mission & Vision</a></li>
                 <li><a href="#product">Product</a></li>
-                <li><a href="#teams">Testimoni</a></li>
+                <li><a href="#services">Plantation & Processing Center</a></li>
+                <li><a href="#testimoni">Testimoni</a></li>
                 <li><a href="#partnership">Partnership</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -178,7 +179,7 @@
                     <div class="mv-icon">
                         <i class="fas fa-bullseye"></i>
                     </div>
-                    <h3>Our Mission</h3>
+                    <h3 class="mission-title">Our Mission</h3>
                     <p>
                         Misi Beets Center Indonesia adalah mengembangkan produk-produk berbahan dasar bit melalui pendekatan riset, teknologi pengolahan yang higienis, dan standar produksi yang ketat agar menghasilkan kualitas terbaik. Perusahaan juga bertujuan memberdayakan petani lokal melalui sistem kemitraan berkelanjutan, menerapkan praktik pertanian ramah lingkungan, serta menyediakan edukasi mengenai pemanfaatan bit sebagai superfood. Selain itu, BCI berkomitmen untuk menghadirkan inovasi produk yang mudah diakses masyarakat, mendukung gaya hidup sehat, dan memperkuat posisi Indonesia sebagai produsen bit bernilai tinggi di pasar nasional maupun global.
                     </p>
@@ -188,7 +189,7 @@
                     <div class="mv-icon">
                         <i class="fas fa-eye"></i>
                     </div>
-                    <h3>Our Vision</h3>
+                    <h3 class="mission-title">Our Vission</h3>
                     <p>
                     Beets Center Indonesia memiliki visi untuk menjadi pusat inovasi dan pengembangan bit terdepan di Indonesia, 
                     memadukan kekayaan alam lokal dengan teknologi modern untuk menghasilkan produk pangan fungsional berstandar 
@@ -222,6 +223,14 @@
                             <li>Mengandung C – Manfaat C.</li>
                             <li>Mengandung D – Manfaat D.</li>
                         </ul>
+                        <h3> </h3>
+                        <h4>Dapat di Beli melalui</h4>
+                        <a href="https://shopee.co.id/Moera-Beets-Powder-Herbifams-Serbuk-Buah-Bit-100-gram-Buah-Bit-Premium-Bubuk-Bit-Herbifams-Original-100--i.792664506.23536936555" 
+                        target="_blank" 
+                        class="shop-btn">
+                            <img src="{{ url_for('static', filename='img/shopee.png') }}" class="shop-icon">
+                            Beli di Shopee
+                        </a>
                     </div>
                 </div>
             </div>
@@ -441,7 +450,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="">BIT CENTER INDONESIA</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="">BIT CENTER INDONESIA</a> | <span class="far fa-copyright"></span> 2025 All rights reserved.</span>
     </footer>
 
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
