--- a/static/css/style.css
+++ b/static/css/style.css
@@ -529,6 +529,48 @@ section .title::after {
     margin-bottom: 20px;
     box-shadow: 0 6px 15px rgba(220,20,60,0.35);
 }
+.mv-icon {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background: #ff004f;
+    color: #fff;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 35px;
+    margin: 0 auto;  /* agar lingkarannya center di container */
+}
+.mission-title {
+    text-align: center;
+}
+/* =======================================
+   SHOPEE BUTTON
+======================================= */
+.shop-btn {
+    margin-top: 20px;
+    display: inline-flex;
+    align-items: center;
+    gap: 10px;
+    background-color: transparent; /* warna Shopee */
+    padding: 5px 7px;
+    border-radius: 8px;
+    color: #fff;
+    font-weight: 600;
+    text-decoration: none;
+    transition: 0.3s ease;
+}
+
+.shop-btn:hover {
+    background-color: #ff5722;
+}
+
+.shop-icon {
+    width: 100px;
+    height: 100px;
+}
+
 
 /* =======================================
    COUNTERS
