--- a/templates/index.html
+++ b/templates/index.html
@@ -82,8 +82,8 @@
             <!-- Background slides -->
             <div class="home-slide active" style="background-image: url('{{ url_for('static', filename='img/flat-lay-beets-table.jpg') }}');"></div>
             <div class="home-slide" style="background-image: url('{{ url_for('static', filename='img/twobeets (1).png') }}');"></div>
-            <div class="home-slide" style="background-image: url('{{ url_for('static', filename='img/holi-festival-colors.JPG') }}');"></div>
-            <div class="home-slide" style="background-image: url('{{ url_for('static', filename='img/purple-colored-powder-jar-purple-powder-generate-by-ai.JPG') }}');"></div>
+            <div class="home-slide" style="background-image: url('{{ url_for('static', filename='img/holi-festival-colors.jpg') }}');"></div>
+            <div class="home-slide" style="background-image: url('{{ url_for('static', filename='img/purple-colored-powder-jar-purple-powder-generate-by-ai.jpg') }}');"></div>
 
             <!-- Content tetap di kanan -->
             <div class="home-content">
