Fix image filename case sensitivity in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@
 
             <div class="about-image">
                 <div class="about-slider">
-                    <img src="{{ url_for('static', filename='img/compressed_IMG_0106.jpg') }}" class="active" alt="">
+                    <img src="{{ url_for('static', filename='img/compressed_IMG_0106.JPG') }}" class="active" alt="">
                 </div>
             </div>
 
